- remove algebra options from dmatrix step 1